# emergit

./: .gitignore  BaseMultilingualWindow.cpp  BaseMultilingualWindow.h  BaseMultilingualWindow.ui  CMakeLists.backup.txt  CMakeLists.txt  DEVELOPMENT.md  LICENSE  OSymphonica.cpp  OSymphonica.h  OSymphonica.ui  Prologue.cpp  Prologue.h  README.md  REQUIREMENTS.md  app.qrc  devLog.md  emergit_en_US.ts  emergit_zh_CN.ts  emergit_zh_TW.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  requirements.md
.trash/: main.cpp.backup  mainwindow.cpp.disabled  mainwindow.h.disabled  mainwindow.ui.disabled
.trash/shutdown/: shell.cpp  shutdown.cpp
.trash/splash/: FirstSplash.ui  FirstSplashThread.h
deploy/arch/: PKGBUILD
plugin/: Shutdown.cpp  Shutdown.h  Shutdown.qss  Shutdown.ui
plugin/Shutdown/: Shutdown.cpp  Shutdown.h  Shutdown.ui
plugin/Shutdown/OS/: FreeBSDExecShutdown.cpp  FreeBSDExecShutdown.h  LinuxExecShutdown.cpp  LinuxExecShutdown.h  ShutdownForOSInterface.h  WindowsExecShutdown.cpp  WindowsExecShutdown.h
splash/: FirstSplash.cpp  FirstSplash.h  FirstSplash.ui  FirstSplashThread.cpp
